<resources>
    <string name="app_name">TP3_PA2_GRUPO12</string>
    <string name="txt_welcome">Bienvenido a parking system</string>
    <string name="txt_inicioSesion">Inicia sesión para empezar</string>
    <string name="et_nombreUsuario">Nombre de usuario</string>
    <string name="et_password">Contraseña</string>
    <string name="btn_iniciarSesion">INICIAR SESIÓN</string>
    <string name="txt_registrarse">Registrarse</string>

    <!-- Registrar usuario-->
    <string name="tv_titulo">Parking control</string>
    <string name="registrars">Registrarse</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_email">Correo electrónico</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="txt_repetirContrasena">Repetir Contraseña</string>
    <string name="btn_aceptar">ACEPTAR</string>

    <!-- Parqueos-->
    <string name="txt_flotante">Agregar nuevo parqueo</string>
    <string name="add">Agregar</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
</resources>